--- a/css/Style.css
+++ b/css/Style.css
@@ -1,169 +1,164 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+margin: 0;
+padding: 0;
+box-sizing: border-box;
 }
 .imglogo {
-  text-align: center;
+text-align: center;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(0, 0, 0);
+font-family: Arial, Helvetica, sans-serif;
+background-color: rgb(0, 0, 0);
 }
 h1 {
-  color: rgb(238, 53, 62);
-  text-align: center;
-  margin: 15px;
+color: rgb(238, 53, 62);
+text-align: center;
+margin: 15px;
 }
 .header__nav {
-  width: 100%;
-  height: 90px;
-  background-color: rgb(2, 2, 2);
-  margin: 0 auto;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
+width: 100%;
+height: 90px;
+background-color: rgb(2, 2, 2);
+margin: 0 auto;
+border-radius: 10px;
+display: flex;
+justify-content: center;
 }
 .header__menu {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  padding: 15px;
+list-style: none;
+display: flex;
+align-items: center;
+padding: 15px;
 }
 .header__link {
-  color: rgb(218, 38, 38);
-  text-decoration: none;
-  padding: 0.7rem;
+color: rgb(218, 38, 38);
+text-decoration: none;
+padding: 0.7rem;
 }
 .header__link:hover {
-  background-color: rgb(238, 53, 62);
-  color: rgb(0, 0, 0);
-  border-radius: 20px;
+background-color: rgb(238, 53, 62);
+color: rgb(0, 0, 0);
+border-radius: 20px;
 }
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 2fr 1fr 1fr 1fr 1fr 0.5fr 0.1fr 1fr;
-  gap: 4px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "header header header header header"
-    "Lineas Lineas Lineas Lineas Lineas"
-    ". Cuerpo Cuerpo Cuerpo ."
-    ". Cuerpo Cuerpo Cuerpo ."
-    ". Cuerpo Cuerpo Cuerpo ."
-    ". Cuerpo Cuerpo Cuerpo ."
-    "Marcas Marcas Marcas Marcas Marcas"
-    "footer footer footer footer footer";
-}
-.contenedor-imagenes {
-  width: 500px; /* ancho fijo del contenedor */
-}
-
-.contenedor-imagenes img {
-  display: flex;
-  width: 49%; /* ajustar el ancho de las imágenes según sea necesario */
-  margin: 0.5%; /* agregar un pequeño margen entre las imágenes */
-}
-.img_section2 {
-  text-align: center;
-  padding: 20px;
-}
-.img_rrss {
-  text-align: left;
-  padding: 20px;
-}
-
-.footer {
-  grid-area: footer;
-  text-align: center;
-  color:black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(
-    circle,
-    rgba(114, 251, 63, 1) 0%,
-    rgb(14, 10, 34) 100%
-  );
-  padding: 20px;
-  font-size: large;
-  
-}
-.listaa {
-  text-decoration: none;
-  text-align: center;
-}
-.header {
-  grid-area: header;
-}
-
-.Marcas {
-  grid-area: Marcas;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  max-width: 100%;
-  height: auto;
-}
-
-.Lineas {
-  grid-area: Lineas;
-  text-align: center;
-  max-width: 100%;
-  margin-left: 5%;
-  height: auto;
-  align-content: center;
-  align-items: center;
-  margin-bottom: 0%;
-}
-.Marcas {
-  grid-area: Marcas;
-  text-align: center;
-  max-width: 100%;
-  margin-left: 10%;
-  height: auto;
-  align-content: center;
-  align-items: center;
-  margin-bottom: 0%;
-}
-  
-.Cuerpo {
-  grid-area: Cuerpo;
-}
-.lista {
-  text-align: center;
-  list-style-type: none;
-  display: inline-block;
-  margin-left: 200px;
-}
-.lista a {
-  text-decoration: none;
-}
-.logowsp {
-  width: 60px;
-  height: 60px;
-
-  position: fixed;
-  bottom: 20px;
-  right: 40px;
-}
-.rrss {
-  width: 40rem;
-  height: 40rem;
-  bottom: 20rem;
-  left: 40rem;
-}
-.containerofer {  display: grid;
-  grid-template-columns: 0.7fr 1.1fr 1.1fr 1.1fr 0.7fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr;
+.containerH {  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 0.6fr 2.2fr 0.6fr 0.6fr;
+  grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "header2 header2 header2 header2 header2"
-    "Banner Banner Banner Banner Banner"
-    ". foto1 foto2 foto3 ."
-    ". foto4 foto5 foto6 ."
-    ". foto7 foto8 foto9 ."
-    "footer2 footer2 footer2 footer2 footer2";
+    "header"
+    "LineasH"
+    "CuerpoH"
+    "MarcasH"
+    "footer";
+}
+
+.header { grid-area: header; }
+
+.LineasH { grid-area: LineasH;
+text-align: center; }
+
+.CuerpoH { grid-area: CuerpoH;
+  text-align: center; }
+
+.MarcasH { grid-area: MarcasH;
+  text-align: center; }
+
+.footer { grid-area: footer; }
+
+@media (max-width:600px)
+{.containeH{
+display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: 5fr;
+gap: 3px;
+grid-auto-flow: row;
+grid-template-areas: 
+  "header"
+  "LineasH"
+  "CuerpoH"
+  "MarcasH"
+  "footer";
+}
+}
+
+.contenedor-imagenes {
+width: 500px; /* ancho fijo del contenedor */
+}
+
+.contenedor-imagenes img {
+display: flex;
+width: 49%; /* ajustar el ancho de las imágenes según sea necesario */
+margin: 0.5%; /* agregar un pequeño margen entre las imágenes */
+}
+.img_section2 {
+text-align: center;
+padding: 20px;
+}
+.img_rrss {
+text-align: left;
+padding: 20px;
+}
+
+.footer {
+grid-area: footer;
+text-align: center;
+color:black;
+background: rgb(0, 7, 104);
+background: radial-gradient(
+  circle,
+  rgba(114, 251, 63, 1) 0%,
+  rgb(14, 10, 34) 100%
+);
+padding: 20px;
+font-size: large;
+
+}
+.listaa {
+text-decoration: none;
+text-align: center;
+}
+.header {
+grid-area: header;
+}
+
+
+.lista {
+text-align: center;
+list-style-type: none;
+display: inline-block;
+margin-left: 200px;
+}
+.lista a {
+text-decoration: none;
+}
+.logowsp {
+width: 60px;
+height: 60px;
+
+position: fixed;
+bottom: 20px;
+right: 40px;
+}
+.rrss {
+width: 40rem;
+height: 40rem;
+bottom: 20rem;
+left: 40rem;
+}
+.containerofer {  display: grid;
+grid-template-columns: 0.7fr 1.1fr 1.1fr 1.1fr 0.7fr;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr;
+gap: 0px 0px;
+grid-auto-flow: row;
+grid-template-areas:
+  "header2 header2 header2 header2 header2"
+  "Banner Banner Banner Banner Banner"
+  ". foto1 foto2 foto3 ."
+  ". foto4 foto5 foto6 ."
+  ". foto7 foto8 foto9 ."
+  "footer2 footer2 footer2 footer2 footer2";
 }
 
 .footer2 { grid-area: footer2; }
@@ -174,235 +169,266 @@ h1 {
 width: 100%; }
 
 .foto4 { grid-area: foto4;
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto1 { grid-area: foto1; 
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 .foto2 { grid-area: foto2;
 
-  opacity: .5;
-  }
+opacity: .5;
+}
 
 .foto3 { grid-area: foto3;
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto5 { grid-area: foto5;
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto6 { grid-area: foto6;
- 
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto7 { grid-area: foto7;
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto8 { grid-area: foto8;
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto9 { grid-area: foto9;
-  
-  opacity: .5;
-  }
+
+opacity: .5;
+}
 
 .foto1:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto2:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto3:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto4:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto5:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto6:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto8:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto9:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .foto7:hover{
-  opacity: 1;
-  }
+opacity: 1;
+}
 .container3 {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 0.5fr;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "headerQ headerQ headerQ headerQ"
-    "Main Main Aside Aside"
-    "Main Main Aside Aside"
-    "footerq footerq footerq footerq";
+grid-template-columns: 1fr 1fr 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr 0.5fr;
+align-items: center;
+align-content: center;
+justify-content: center;
+gap: 0px 0px;
+grid-auto-flow: row;
+grid-template-areas:
+  "headerQ headerQ headerQ headerQ"
+  "Main Main Aside Aside"
+  "Main Main Aside Aside"
+  "footerq footerq footerq footerq";
 }
 
 .headerq { grid-area: headerQ; }
 
 .footerq {
-  grid-area: footerq;
-  text-align: center;
-  color:black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(
-    circle,
-    rgba(114, 251, 63, 1) 0%,
-    rgb(14, 10, 34) 100%
-  );
-  padding: 20px;
-  font-size: large;
-  
+grid-area: footerq;
+text-align: center;
+color:black;
+background: rgb(0, 7, 104);
+background: radial-gradient(
+  circle,
+  rgba(114, 251, 63, 1) 0%,
+  rgb(14, 10, 34) 100%
+);
+padding: 20px;
+font-size: large;
+
 }
 .footer2 {
-  grid-area: footer2;
-  text-align: center;
-  color:black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(
-    circle,
-    rgba(114, 251, 63, 1) 0%,
-    rgb(14, 10, 34) 100%
-  );
-  padding: 20px;
-  font-size: large;
+grid-area: footer2;
+text-align: center;
+color:black;
+background: rgb(0, 7, 104);
+background: radial-gradient(
+  circle,
+  rgba(114, 251, 63, 1) 0%,
+  rgb(14, 10, 34) 100%
+);
+padding: 20px;
+font-size: large;
 }
 
 .Main { grid-area: Main; 
-  color: rgb(255, 255, 255);
-  background-color: rgb(0, 0, 0);
-  font-family: "Raleway", sans-serif;
-  font-weight: bold;
-  font-size: 1.3rem;
-  margin-left: 5%;
+color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+font-family: "Raleway", sans-serif;
+font-weight: bold;
+font-size: 1.3rem;
+margin-left: 5%;
 
 }
 
 .Aside { grid-area: Aside; 
-  text-align: center;
-  
+text-align: center;
+
 }
 .containers {  display: grid; 
-  grid-template-columns: 1fr 1fr 1fr 1fr; 
-  grid-template-rows: 0.5fr 2.1fr 0.4fr; 
-  gap: 0px 0px; 
-  grid-template-areas: 
-    "headers headers headers headers"
-    "mains mains asides asides"
-    "footers footers footers footers"; 
+grid-template-columns: 1fr 1fr 1fr 1fr; 
+grid-template-rows: 0.5fr 2.1fr 0.4fr; 
+gap: 0px 0px; 
+grid-template-areas: 
+  "headers headers headers headers"
+  "mains mains asides asides"
+  "footers footers footers footers"; 
 }
 
 .headers { grid-area: headers;  }
 
 .footers { grid-area: footers;; 
-  
-  text-align: center;
-  color:black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(
-    circle,
-    rgba(114, 251, 63, 1) 0%,
-    rgb(14, 10, 34) 100%
-  );
-  padding: 20px;
-  font-size: large;}
+
+text-align: center;
+color:black;
+background: rgb(0, 7, 104);
+background: radial-gradient(
+  circle,
+  rgba(114, 251, 63, 1) 0%,
+  rgb(14, 10, 34) 100%
+);
+padding: 20px;
+font-size: large;}
 
 .mains {  grid-area: mains;  
 color: aliceblue;
-padding: 20%;}
+padding: 10%;}
 
 .asides { grid-area: asides; }
+
 @media (max-width:600px)
 {.containers{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 5fr;
-  gap: 3px;
-  grid-auto-flow: row;
-  grid-template-areas: 
-    "headers"
-    "mains"
-    "asides"
-    "asides"
-    "footers";
-  }
+display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: 5fr;
+gap: 3px;
+grid-auto-flow: row;
+grid-template-areas: 
+  "headers"
+  "asides"
+  "asides"
+  "mains"
+  "footers";
+}
 }
 
 @media (max-width:600px)
-{.container3{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "headerQ headerQ"
-    "Main Main" 
-    "Main Main"
-    "Aside Aside"
-    "Aside Aside"
-    "footerq footerq";
-}
-}
-@media (max-width:600px)
 {.containerofer{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-  "header2 header2"
-  "Banner Banner"
-  ". foto1 foto2."
-  ". foto3 foto4."
-  ". foto5 foto6."
-  ". foto7 foto8."
-  ". foto9."
-  "footer2 footer2.";
-  font-size: 0,5px;
-  }
+display: grid;
+grid-template-columns: 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+align-items: center;
+align-content: center;
+justify-content: center;
+gap: 0px 0px;
+grid-auto-flow: row;
+grid-template-areas:
+"header2 header2"
+"Banner Banner"
+". foto1 foto2."
+". foto3 foto4."
+". foto5 foto6."
+". foto7 foto8."
+". foto9."
+"footer2 footer2.";
+font-size: 0,5px;
+}
 }
 #galeria img {
-  width: 100%;
-  height: 300px;
-  opacity: 0.5;
+width: 100%;
+height: 300px;
+opacity: 0.5;
 }
 #galeria .col-lg-4 {
-  padding: 25px;
-  margin: 0;
+padding: 25px;
+margin: 0;
 }
 #galeria img:hover{
-  border: 5px solid #f7f7f7;
-  opacity: 1;
+border: 5px solid #f7f7f7;
+opacity: 1;
 }
 .titulo{
-  text-align: left;
+text-align: left;
+}
+.containers-QS {  display: grid;
+grid-template-columns: 0.9fr 1.1fr;
+grid-template-rows: 0.8fr 2.6fr 0.7fr;
+grid-auto-columns: 1fr;
+gap: 0px 0px;
+grid-auto-flow: row;
+grid-template-areas:
+  "Headers Headers"
+  "Mains Asides"
+  "Footers Footers";
+}
+
+.Headers { grid-area: Headers; }
+
+.Footers { grid-area: Footers; 
+text-align: center;
+color:black;
+background: rgb(0, 7, 104);
+background: radial-gradient(
+  circle,
+  rgba(114, 251, 63, 1) 0%,
+  rgb(14, 10, 34) 100%
+);
+padding: 20px;
+font-size: large;}
+
+.Mains { grid-area: Mains; 
+color: #ffffff;
+font-size: 1.3rem;
+padding: 5px;
+}
+
+.Asides { grid-area: Asides; 
+text-align: center;}
+
+@media (max-width:600px)
+{.containers-QS{
+display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: 5fr;
+gap: 3px;
+grid-auto-flow: row;
+grid-template-areas: 
+  "Headers"
+  "Asides"
+  "Mains"
+  "Footers";
+}
 }
