--- a/Scss/Style.css
+++ b/Scss/Style.css
@@ -1,3 +1,146 @@
+.containerH {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 0.6fr 2.2fr 0.6fr 0.6fr;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "header" "LineasH" "CuerpoH" "MarcasH" "footer";
+}
+
+.header {
+  grid-area: header;
+  grid-area: header;
+}
+
+.LineasH {
+  grid-area: LineasH;
+  text-align: center;
+}
+
+.CuerpoH {
+  grid-area: CuerpoH;
+  text-align: center;
+}
+
+.MarcasH {
+  grid-area: MarcasH;
+  text-align: center;
+}
+
+.footer {
+  grid-area: footer;
+  grid-area: footer;
+  text-align: center;
+  color: black;
+  background: rgb(0, 7, 104);
+  background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
+  padding: 20px;
+  font-size: large;
+}
+
+@media (max-width: 600px) {
+  .containerH {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5fr;
+    gap: 3px;
+    grid-auto-flow: row;
+    grid-template-areas: "header" "LineasH" "CuerpoH" "MarcasH" "footer";
+  }
+}
+.containers-QS {
+  display: grid;
+  grid-template-columns: 0.9fr 1.1fr;
+  grid-template-rows: 0.8fr 2.6fr 0.7fr;
+  grid-auto-columns: 1fr;
+  gap: 0px 0px;
+  grid-auto-flow: row;
+  grid-template-areas: "Headers Headers" "Mains Asides" "Footers Footers";
+}
+
+.Headers {
+  grid-area: Headers;
+}
+
+.Footers {
+  grid-area: Footers;
+  text-align: center;
+  color: black;
+  background: rgb(0, 7, 104);
+  background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
+  padding: 20px;
+  font-size: large;
+}
+
+.Mains {
+  grid-area: Mains;
+  color: #ffffff;
+  font-size: 1.3rem;
+  padding: 5px;
+}
+
+.Asides {
+  grid-area: Asides;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .containers-QS {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5fr;
+    gap: 3px;
+    grid-auto-flow: row;
+    grid-template-areas: "Headers" "Asides" "Mains" "Footers";
+  }
+}
+.containers {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.5fr 2.1fr 0.4fr;
+  gap: 0px 0px;
+  grid-template-areas: "headers headers headers headers" "mains mains asides asides" "footers footers footers footers";
+}
+
+.headers {
+  grid-area: headers;
+}
+
+.footers {
+  grid-area: footers;
+  text-align: center;
+  color: black;
+  background: rgb(0, 7, 104);
+  background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
+  padding: 20px;
+  font-size: large;
+}
+
+.mains {
+  grid-area: mains;
+  color: aliceblue;
+  padding: 10%;
+}
+
+.asides {
+  grid-area: asides;
+}
+
+.titulo {
+  text-align: left;
+}
+
+@media (max-width: 600px) {
+  .containers {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5fr;
+    gap: 3px;
+    grid-auto-flow: row;
+    grid-template-areas: "headers" "asides" "asides" "mains" "footers";
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -45,47 +188,6 @@ h1 {
   background-color: rgb(238, 53, 62);
   color: rgb(0, 0, 0);
   border-radius: 20px;
-}
-
-.containerH {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 0.6fr 2.2fr 0.6fr 0.6fr;
-  grid-auto-columns: 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "header" "LineasH" "CuerpoH" "MarcasH" "footer";
-}
-
-.header {
-  grid-area: header;
-  grid-area: header;
-}
-
-.LineasH {
-  grid-area: LineasH;
-  text-align: center;
-}
-
-.CuerpoH {
-  grid-area: CuerpoH;
-  text-align: center;
-}
-
-.MarcasH {
-  grid-area: MarcasH;
-  text-align: center;
-}
-
-.footer {
-  grid-area: footer;
-  grid-area: footer;
-  text-align: center;
-  color: black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
-  padding: 20px;
-  font-size: large;
 }
 
 .contenedor-imagenes {
@@ -161,107 +263,9 @@ h1 {
   grid-area: header2;
 }
 
-.Banner {
-  grid-area: Banner;
-  width: 100%;
-}
-
-.foto4 {
-  grid-area: foto4;
-  opacity: 0.5;
-}
-.foto4:hover {
-  opacity: 1;
-}
-
-.foto1 {
-  grid-area: foto1;
-  opacity: 0.5;
-}
-.foto1:hover {
-  opacity: 1;
-}
-
-.foto2 {
-  grid-area: foto2;
-  opacity: 0.5;
-}
-.foto2:hover {
-  opacity: 1;
-}
-
-.foto3 {
-  grid-area: foto3;
-  opacity: 0.5;
-}
-.foto3:hover {
-  opacity: 1;
-}
-
-.foto5 {
-  grid-area: foto5;
-  opacity: 0.5;
-}
-.foto5:hover {
-  opacity: 1;
-}
-
-.foto6 {
-  grid-area: foto6;
-  opacity: 0.5;
-}
-.foto6:hover {
-  opacity: 1;
-}
-
-.foto7 {
-  grid-area: foto7;
-  opacity: 0.5;
-}
-.foto7:hover {
-  opacity: 1;
-}
-
-.foto8 {
-  grid-area: foto8;
-  opacity: 0.5;
-}
-.foto8:hover {
-  opacity: 1;
-}
-
-.foto9 {
-  grid-area: foto9;
-  opacity: 0.5;
-}
-.foto9:hover {
-  opacity: 1;
-}
-
-.container3 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 0.5fr;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas: "headerQ headerQ headerQ headerQ" "Main Main Aside Aside" "Main Main Aside Aside" "footerq footerq footerq footerq";
-}
-
-.headerq {
-  grid-area: headerQ;
-}
-
-.footerq {
-  grid-area: footerq;
+.banner {
   text-align: center;
-  color: black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
-  padding: 20px;
-  font-size: large;
+  width: 90%;
 }
 
 .Main {
@@ -279,127 +283,25 @@ h1 {
   text-align: center;
 }
 
-.containers {
+.containerofer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.5fr 2.1fr 0.4fr;
-  gap: 0px 0px;
-  grid-template-areas: "headers headers headers headers" "mains mains asides asides" "footers footers footers footers";
-}
-
-.headers {
-  grid-area: headers;
-}
-
-.footers {
-  grid-area: footers;
-  text-align: center;
-  color: black;
-  background: rgb(0, 7, 104);
-  background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
-  padding: 20px;
-  font-size: large;
-}
-
-.mains {
-  grid-area: mains;
-  color: aliceblue;
-  padding: 10%;
-}
-
-.asides {
-  grid-area: asides;
-}
-
-#galeria img {
-  width: 100%;
-  height: 300px;
-  opacity: 0.5;
-}
-#galeria img:hover {
-  border: 5px solid #f7f7f7;
-  opacity: 1;
-}
-#galeria .col-lg-4 {
-  padding: 25px;
-  margin: 0;
-}
-
-.titulo {
-  text-align: left;
-}
-
-.containers-QS {
-  display: grid;
-  grid-template-columns: 0.9fr 1.1fr;
-  grid-template-rows: 0.8fr 2.6fr 0.7fr;
-  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas: "Headers Headers" "Mains Asides" "Footers Footers";
+  grid-template-areas: "header2 header2" "Banner Banner" ". foto1 foto2." ". foto3 foto4." ". foto5 foto6." ". foto7 foto8." ". foto9." "footer2 footer2.";
+  font-size: 0, 5px;
 }
 
-.Headers {
-  grid-area: Headers;
-}
-
-.Footers {
-  grid-area: Footers;
+.footerq {
+  grid-area: footerq;
   text-align: center;
   color: black;
   background: rgb(0, 7, 104);
   background: radial-gradient(circle, rgb(114, 251, 63) 0%, rgb(14, 10, 34) 100%);
   padding: 20px;
   font-size: large;
-}
-
-.Mains {
-  grid-area: Mains;
-  color: #ffffff;
-  font-size: 1.3rem;
-  padding: 5px;
-}
-
-.Asides {
-  grid-area: Asides;
-  text-align: center;
-}
-
-@media (max-width: 600px) {
-  .containeH {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 5fr;
-    gap: 3px;
-    grid-auto-flow: row;
-    grid-template-areas: "header" "LineasH" "CuerpoH" "MarcasH" "footer";
-  }
-  .containers {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 5fr;
-    gap: 3px;
-    grid-auto-flow: row;
-    grid-template-areas: "headers" "asides" "asides" "mains" "footers";
-  }
-  .containerofer {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas: "header2 header2" "Banner Banner" ". foto1 foto2." ". foto3 foto4." ". foto5 foto6." ". foto7 foto8." ". foto9." "footer2 footer2.";
-    font-size: 0, 5px;
-  }
-  .containers-QS {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 5fr;
-    gap: 3px;
-    grid-auto-flow: row;
-    grid-template-areas: "Headers" "Asides" "Mains" "Footers";
-  }
 }/*# sourceMappingURL=Style.css.map */
