--- a/Scss/_QuienesSomos.scss
+++ b/Scss/_QuienesSomos.scss
@@ -1,4 +1,5 @@
 
+
 .containers-QS {
 	display: grid;
 	grid-template-columns: 0.9fr 1.1fr;
@@ -30,12 +31,23 @@
 	grid-area: Asides;
 	text-align: center;
 }
-@media (max-width:600px) {
-    .containers-QS {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 5fr;
-        gap: 3px;
-        grid-auto-flow: row;
-        grid-template-areas: "Headers" "Asides" "Mains" "Footers";
-    }}
+@media (max-width: 600px) {
+  .containers-QS {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 5fr;
+    gap: 3px;
+    grid-auto-flow: row;
+    grid-template-areas: "Headers" "Asides" "Mains" "Footers";
+    font-size: 14px; /* Ajusta el tamaño de fuente deseado */
+  }
+}
+@media (max-width: 600px) {
+.mains P {
+	text-align:justify  ;
+	grid-area: mains;
+	color: $color_7;
+	font-size: 14px;
+	padding: 15px;
+	}
+	  }
