--- a/Scss/Style.css
+++ b/Scss/Style.css
@@ -1,35 +1,34 @@
-.containerH {
+@charset "UTF-8";
+.containerI {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 0.6fr 2.2fr 0.6fr 0.6fr;
+  grid-template-rows: 1fr 0.6fr 1.9fr 0.9fr 0.6fr;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas: "header" "LineasH" "CuerpoH" "MarcasH" "footer";
+  grid-template-areas: "header" "LineasI" "CuerpoI" "MarcasI" "footer";
 }
 
 .header {
   grid-area: header;
-  grid-area: header;
 }
 
-.LineasH {
-  grid-area: LineasH;
+.LineasI {
+  grid-area: LineasI;
   text-align: center;
 }
 
-.CuerpoH {
-  grid-area: CuerpoH;
+.CuerpoI {
+  grid-area: CuerpoI;
   text-align: center;
 }
 
-.MarcasH {
-  grid-area: MarcasH;
+.MarcasI {
+  grid-area: MarcasI;
   text-align: center;
 }
 
 .footer {
-  grid-area: footer;
   grid-area: footer;
   text-align: center;
   color: black;
@@ -39,16 +38,6 @@
   font-size: large;
 }
 
-@media (max-width: 600px) {
-  .containerH {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 5fr;
-    gap: 3px;
-    grid-auto-flow: row;
-    grid-template-areas: "header" "LineasH" "CuerpoH" "MarcasH" "footer";
-  }
-}
 .containers-QS {
   display: grid;
   grid-template-columns: 0.9fr 1.1fr;
@@ -93,6 +82,16 @@
     gap: 3px;
     grid-auto-flow: row;
     grid-template-areas: "Headers" "Asides" "Mains" "Footers";
+    font-size: 14px; /* Ajusta el tamaño de fuente deseado */
+  }
+}
+@media (max-width: 600px) {
+  .mains P {
+    text-align: justify;
+    grid-area: mains;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 15px;
   }
 }
 .containers {
@@ -141,6 +140,48 @@
     grid-template-areas: "headers" "asides" "asides" "mains" "footers";
   }
 }
+@media (max-width: 600px) {
+  .containers P {
+    text-align: justify;
+    grid-area: Mains;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 5px;
+  }
+}
+body {
+  background-color: #333;
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+
+.container404 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+a {
+  color: #ff0000;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -282,6 +323,10 @@ h1 {
 .Aside {
   grid-area: Aside;
   text-align: center;
+}
+
+a {
+  text-decoration: none;
 }
 
 .containerofer {
