--- a/Scss/Style.css
+++ b/Scss/Style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .containerI {
   display: grid;
   grid-template-columns: 1fr;
@@ -65,7 +64,7 @@
 .Mains {
   grid-area: Mains;
   color: #ffffff;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   padding: 5px;
 }
 
@@ -82,15 +81,14 @@
     gap: 3px;
     grid-auto-flow: row;
     grid-template-areas: "Headers" "Asides" "Mains" "Footers";
-    font-size: 14px; /* Ajusta el tamaño de fuente deseado */
   }
 }
 @media (max-width: 600px) {
-  .mains P {
+  .Mains P {
     text-align: justify;
     grid-area: mains;
     color: #ffffff;
-    font-size: 14px;
+    font-size: 12px;
     padding: 15px;
   }
 }
