--- a/Scss/_QuienesSomos.scss
+++ b/Scss/_QuienesSomos.scss
@@ -53,8 +53,8 @@
   .Mains P {
     text-align: justify;
     grid-area: mains;
-    color: $color_7;
-    font-size: 12px;
-    padding: 15px;
+    color: #ffffff;
+    font-size: 11.5px;
+    padding: 25px;
   }
 }
