--- a/Scss/Style.css
+++ b/Scss/Style.css
@@ -64,8 +64,8 @@
 .Mains {
   grid-area: Mains;
   color: #ffffff;
-  font-size: 1.1rem;
-  padding: 5px;
+  font-size: 12px;
+  padding: 25px;
   text-align:justify;
 }
 
